*ckan-1.20.0 (17 Sep 2016)

  17 Sep 2016; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +ckan-1.20.0.ebuild:
  games-util/ckan: version bump

*ckan-1.18.1 (08 Aug 2016)

  08 Aug 2016; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +ckan-1.18.1.ebuild:
  games-util/ckan: version bump & unbundle log4net  still a lot of bundled
  libraries, but the others are not in the main tree and the dotnet overlay is a
  mess.

  27 Jun 2016; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  -ckan-1.14.3.ebuild:
  games-util/ckan: remove old version

*ckan-1.18.0 (27 Jun 2016)

  27 Jun 2016; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +ckan-1.18.0.ebuild, metadata.xml:
  games-util/ckan: version bump

*ckan-1.16.1 (16 Mar 2016)

  16 Mar 2016; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +ckan-1.16.1.ebuild, -ckan-1.16.0.ebuild:
  games-util/ckan: version bump

  24 Dec 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  ckan-1.14.3.ebuild:
  games-util/ckan: fix git call during build & new headers

*ckan-1.16.0 (24 Dec 2015)

  24 Dec 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +ckan-1.16.0.ebuild:
  games-util/ckan: version bump

*ckan-1.14.3 (03 Oct 2015)

  03 Oct 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +ckan-1.14.3.ebuild, -ckan-1.14.2.ebuild:
  games-util/ckan: version bump

*ckan-1.14.2 (02 Oct 2015)

  02 Oct 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +ckan-1.14.2.ebuild, -ckan-1.14.1.ebuild:
  games-util/ckan: version bump

*ckan-1.14.1 (10 Sep 2015)

  10 Sep 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +ckan-1.14.1.ebuild, -ckan-1.14.0.ebuild:
  games-util/ckan: version bump

*ckan-1.14.0 (24 Aug 2015)

  24 Aug 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +ckan-1.14.0.ebuild, -ckan-1.12.0.ebuild:
  games-util/ckan: version bump

*ckan-1.12.0 (11 Aug 2015)
