@@ -1,4 +1,3 @@
-DIST ckan-1.16.1.tar.gz 23528710 SHA256 1c08929b7d67cf50a00c13077183011aab377fe22134f26564c110f6187483dd SHA512 85eb7ad1ab390b68136b2e73ef9aeac06708e44cce4128f4174561acc249867d76c678747f123ec2b5cc3af73ed39cddf7cb63e646f7eeb20f7f358b32863adf WHIRLPOOL f90b90fbc5fb3eb62b83be8f7fc84a2d5879979a4e21d7d52db65294e67c50852b2c63a234d82cb5365863db5ea17140c40c24ea80fe5d985f641b04f9caed50
 DIST ckan-1.18.0.tar.gz 23541803 SHA256 e7f6e1fd557f71942921dc34849a0b38ffa7c3fe856fd54a9efa6ad789058cb1 SHA512 71a208da7cd9d5d290eaa91d1ad2913d1d59df9f0f3a6533df6ef0472795a02fc12727ef3e2e8da8d32e3ee281a5bcfa87977fdf5eabb6af4c784ad0510928ab WHIRLPOOL e7eb12a6537f07fd470bded465d5d29094f95c3d2e28f0b7bf79ce420f858d06cc73c402c04d77539f8c5a85930fd83c2bba1547c6c1ddbaadc19bb19ef8e516
 DIST ckan-1.18.1.tar.gz 23709346 SHA256 8123958964a50f9405e9a77f4453ee520eb0c36578f35a4a58590df4130edb21 SHA512 1014982ae847c9d71b2dfca5fd88a54347a8b36ac543d9d1d7090b442682687e48cdec2b5fa153205786ebc5119f74c820fe030bd4ce5bafd0c32b593b534264 WHIRLPOOL a8891f3418a8647bc14dfe2643dcb5472ea61c29ca4650b227a9c2d1eeab64e257a3f79a03996fdae465e7dc12cd5037620980894f0bd664ef804cf2eef6aad3
 DIST ckan-1.20.0.tar.gz 23756224 SHA256 07e3afcf57b58efc289c234aac5de6a0ef4bd7a397a68a08f5fb9665d1282138 SHA512 889c06642e25008788d551ec7799bbbab17d039691aa2950519377010092ca59939dee2fcc6ddd8647bd34f64b8670d2b0fd5a88f192949812b6b64373715f8a WHIRLPOOL fe157ed546eb13fd7ef072395fdf550c6e855c65f9da26ac6e4f110b798bf11546eddb7d43ba48cc60e8acb81fc5ca174ba0079057dae2877c399f2867dd1d03
